# Greenhousegases-emission-prediction

./: GHG_Emissions_Prediction.ipynb  GHG_Emissions_Prediction_Complete.ipynb  GHG_emmision_project.ipynb  README.md  pyproject.toml  replit.md
